2004-01-17 
	buffered mode for ftp (no more a tmp file)
2004-01-20
	cleanup, setup.py