@@ -1,5 +1,5 @@
 recursive-include src gxiso.py gxiso.png gxiso.glade gxiso.gladep
-recursive-include po *.po update.sh
+recursive-include po *.po
 include gxiso.desktop.in MANIFEST.in
 include ChangeLog
 include setup.py setup.cfg
