@@ -1,0 +1,2 @@
+src/gxiso.py
+src/gxiso.glade
