@@ -1,1 +1,0 @@
-xgettext -o gxiso.pot  ../src/gxiso.glade ../src/gxiso.py
